--- a/inventory/2SpeedLab/group_vars/k8s_cluster/k8s-net-cilium.yml
+++ b/inventory/2SpeedLab/group_vars/k8s_cluster/k8s-net-cilium.yml
@@ -10,7 +10,7 @@
 cilium_l2announcements: false
 
 # Cilium agent health port
-cilium_agent_health_port: "9879"
+# cilium_agent_health_port: "9879"
 
 # Identity allocation mode selects how identities are shared between cilium
 # nodes by setting how they are stored. The options are "crd" or "kvstore".
@@ -25,7 +25,7 @@ cilium_agent_health_port: "9879"
 #   - --synchronize-k8s-nodes
 #   - --identity-allocation-mode=kvstore
 #   - Ref: https://docs.cilium.io/en/stable/internals/cilium_operator/#kvstore-operations
-cilium_identity_allocation_mode: crd
+# cilium_identity_allocation_mode: kvstore
 
 # Etcd SSL dirs
 # cilium_cert_dir: /etc/cilium/certs
@@ -34,13 +34,13 @@ cilium_identity_allocation_mode: crd
 # kube_etcd_key_file: cert-key.pem
 
 # Limits for apps
-cilium_memory_limit: 1000M
-cilium_cpu_limit: 1000m
-cilium_memory_requests: 64M
-cilium_cpu_requests: 100m
+# cilium_memory_limit: 500M
+# cilium_cpu_limit: 500m
+# cilium_memory_requests: 64M
+# cilium_cpu_requests: 100m
 
 # Overlay Network Mode
-cilium_tunnel_mode: vxlan
+# cilium_tunnel_mode: vxlan
 
 cilium_ingress_enabled: true
 cilium_ingress_default: true
@@ -61,7 +61,7 @@ cilium_ingress_load_balancer_mode: "dedicated"
 # Only effective when monitor aggregation is set to "medium" or higher.
 # cilium_monitor_aggregation_flags: "all"
 # Kube Proxy Replacement mode (strict/partial)
-cilium_kube_proxy_replacement: true
+# cilium_kube_proxy_replacement: partial
 
 # If upgrading from Cilium < 1.5, you may want to override some of these options
 # to prevent service disruptions. See also:
@@ -107,11 +107,11 @@ cilium_kube_proxy_replacement: true
 # cilium_native_routing_cidr_ipv6: ""
 
 # Enable transparent network encryption.
-cilium_encryption_enabled: false
+# cilium_encryption_enabled: false
 
 # Encryption method. Can be either ipsec or wireguard.
 # Only effective when `cilium_encryption_enabled` is set to true.
-#cilium_encryption_type: "wireguard"
+# cilium_encryption_type: "ipsec"
 
 # Enable encryption for pure node to node traffic.
 # This option is only effective when `cilium_encryption_type` is set to `ipsec`.
@@ -153,20 +153,20 @@ cilium_encryption_enabled: false
 
 # Hubble
 ### Enable Hubble without install
-cilium_enable_hubble: false
+# cilium_enable_hubble: false
 ### Enable Hubble-ui
 ### Installed by default when hubble is enabled. To disable set to false
 # cilium_enable_hubble_ui: "{{ cilium_enable_hubble }}"
 ### Enable Hubble Metrics
 cilium_enable_hubble_metrics: true
 ### if cilium_enable_hubble_metrics: true
-cilium_hubble_metrics:
- - dns
- - drop
- - tcp
- - flow
- - icmp
- - http
+# cilium_hubble_metrics: {}
+# - dns
+# - drop
+# - tcp
+# - flow
+# - icmp
+# - http
 ### Enable Hubble install
 # cilium_hubble_install: false
 ### Enable auto generate certs if cilium_hubble_install: true
@@ -185,11 +185,10 @@ cilium_hubble_metrics:
 
 # IP address management mode for v1.9+.
 # https://docs.cilium.io/en/v1.9/concepts/networking/ipam/
-cilium_ipam_mode: kubernetes
+# cilium_ipam_mode: kubernetes
 
 # Extra arguments for the Cilium agent
-cilium_agent_custom_args:
-  - --write-cni-conf-when-ready=/host/etc/cni/net.d/05-cilium.conflist
+# cilium_agent_custom_args: []
 
 # For adding and mounting extra volumes to the cilium agent
 # cilium_agent_extra_volumes: []
@@ -200,7 +199,7 @@ cilium_agent_custom_args:
 # cilium_operator_replicas: 2
 
 # The address at which the cillium operator bind health check api
-cilium_operator_api_serve_addr: "0.0.0.0:9234"
+# cilium_operator_api_serve_addr: "127.0.0.1:9234"
 
 ## A dictionary of extra config variables to add to cilium-config, formatted like:
 ##  cilium_config_extra_vars:
@@ -246,7 +245,7 @@ cilium_operator_api_serve_addr: "0.0.0.0:9234"
 
 # -- Enables masquerading of IPv4 traffic leaving the node from endpoints.
 # Available for Cilium v1.10 and up
-cilium_enable_ipv4_masquerade: true
+# cilium_enable_ipv4_masquerade: true
 # -- Enables masquerading of IPv6 traffic leaving the node from endpoints.
 # Available for Cilium v1.10 and up
 # cilium_enable_ipv6_masquerade: true
