--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ contrib/offline/offline-files.tar.gz
 .idea
 .vscode
 .tox
-.cache
+.cacheheme
 *.bak
 *.tfstate
 *.tfstate*backup
@@ -119,3 +119,4 @@ tmp.md
 # Ansible collection files
 kubernetes_sigs-kubespray*tar.gz
 ansible_collections
+inventory/2SpeedLab/inventory.ini
