--- a/inventory/2SpeedLab/group_vars/all/containerd.yml
+++ b/inventory/2SpeedLab/group_vars/all/containerd.yml
@@ -1,12 +1,12 @@
 ---
 # Please see roles/container-engine/containerd/defaults/main.yml for more configuration options
 
-# containerd_storage_dir: "/var/lib/containerd"
-# containerd_state_dir: "/run/containerd"
-# containerd_oom_score: 0
+containerd_storage_dir: "/var/lib/containerd"
+containerd_state_dir: "/run/containerd"
+containerd_oom_score: 0
 
-# containerd_default_runtime: "runc"
-# containerd_snapshotter: "native"
+containerd_default_runtime: "runc"
+containerd_snapshotter: "native"
 
 # containerd_runc_runtime:
 #   name: runc
