--- a/inventory/2SpeedLab/group_vars/k8s_cluster/k8s-cluster.yml
+++ b/inventory/2SpeedLab/group_vars/k8s_cluster/k8s-cluster.yml
@@ -39,6 +39,8 @@ credentials_dir: "{{ inventory_dir }}/credentials"
 # kube_oidc_auth: false
 # kube_token_auth: false
 
+# disable kubeproxy
+kube_proxy_remove: true
 
 ## Variables for OpenID Connect Configuration https://kubernetes.io/docs/admin/authentication/
 ## To use OpenID you have to deploy additional an OpenID Provider (e.g Dex, Keycloak, ...)
