--- a/inventory/2SpeedLab/group_vars/k8s_cluster/k8s-net-cilium.yml
+++ b/inventory/2SpeedLab/group_vars/k8s_cluster/k8s-net-cilium.yml
@@ -149,12 +149,12 @@ cilium_encryption_enabled: false
 
 # Hubble
 ### Enable Hubble without install
-cilium_enable_hubble: false
+cilium_enable_hubble: true
 ### Enable Hubble-ui
 ### Installed by default when hubble is enabled. To disable set to false
 # cilium_enable_hubble_ui: "{{ cilium_enable_hubble }}"
 ### Enable Hubble Metrics
-# cilium_enable_hubble_metrics: false
+cilium_enable_hubble_metrics: true
 ### if cilium_enable_hubble_metrics: true
 cilium_hubble_metrics:
  - dns
