--- a/roles/container-engine/containerd/molecule/default/converge.yml
+++ b/roles/container-engine/containerd/molecule/default/converge.yml
@@ -5,5 +5,5 @@
   vars:
     container_manager: containerd
   roles:
-    - role: kubespray_defaults
+    - role: kubespray-defaults
     - role: container-engine/containerd
