--- a/roles/container-engine/cri-o/molecule/default/prepare.yml
+++ b/roles/container-engine/cri-o/molecule/default/prepare.yml
@@ -6,15 +6,14 @@
   vars:
     ignore_assert_errors: true
   roles:
-    - role: dynamic_groups
-    - role: bootstrap_os
-    - role: network_facts
+    - role: kubespray-defaults
+    - role: bootstrap-os
     - role: kubernetes/preinstall
     - role: adduser
       user: "{{ addusers.kube }}"
   tasks:
     - name: Download CNI
-      include_tasks: "../../download/tasks/download_file.yml"
+      include_tasks: "../../../../download/tasks/download_file.yml"
       vars:
         download: "{{ download_defaults | combine(downloads.cni) }}"
 
@@ -26,18 +25,29 @@
     ignore_assert_errors: true
     kube_network_plugin: cni
   roles:
-    - role: kubespray_defaults
+    - role: kubespray-defaults
     - role: network_plugin/cni
   tasks:
+    - name: Copy test container files
+      copy:
+        src: "{{ item }}"
+        dest: "/tmp/{{ item }}"
+        owner: root
+        mode: "0644"
+      with_items:
+        - container.json
+        - sandbox.json
     - name: Create /etc/cni/net.d directory
       file:
         path: /etc/cni/net.d
         state: directory
-        owner: root
+        owner: "{{ kube_owner }}"
         mode: "0755"
-    - name: Config bridge host-local CNI
+    - name: Setup CNI
       copy:
-        src: "10-mynet.conf"
-        dest: "/etc/cni/net.d/"
+        src: "{{ item }}"
+        dest: "/etc/cni/net.d/{{ item }}"
         owner: root
         mode: "0644"
+      with_items:
+        - 10-mynet.conf
