--- a/roles/container-engine/gvisor/molecule/default/converge.yml
+++ b/roles/container-engine/gvisor/molecule/default/converge.yml
@@ -6,6 +6,6 @@
     gvisor_enabled: true
     container_manager: containerd
   roles:
-    - role: kubespray_defaults
+    - role: kubespray-defaults
     - role: container-engine/containerd
     - role: container-engine/gvisor
