--- a/roles/container-engine/validate-container-engine/tasks/main.yml
+++ b/roles/container-engine/validate-container-engine/tasks/main.yml
@@ -84,7 +84,7 @@
   block:
     - name: Drain node
       include_role:
-        name: remove_node/pre_remove
+        name: remove-node/pre-remove
         apply:
           tags:
             - pre-remove
@@ -111,7 +111,7 @@
   block:
     - name: Drain node
       include_role:
-        name: remove_node/pre_remove
+        name: remove-node/pre-remove
         apply:
           tags:
             - pre-remove
@@ -137,7 +137,7 @@
   block:
     - name: Drain node
       include_role:
-        name: remove_node/pre_remove
+        name: remove-node/pre-remove
         apply:
           tags:
             - pre-remove
