--- a/inventory/2SpeedLab/group_vars/all/cri-o.yml
+++ b/inventory/2SpeedLab/group_vars/all/cri-o.yml
@@ -7,3 +7,19 @@
 #   - registry: 10.0.0.2:5000
 #     username: user
 #     password: pass
+crio_registries:
+  - prefix: docker.io
+    insecure: false
+    blocked: false
+    location: docker.io
+    unqualified: true
+  - prefix: quay.io
+    insecure: false
+    blocked: false
+    location: quay.io
+    unqualified: true
+
+crio_unqualified_search_registries:
+  - docker.io
+  - quay.io
+  - gcr.io
