--- a/inventory/2SpeedLab/group_vars/k8s_cluster/k8s-cluster.yml
+++ b/inventory/2SpeedLab/group_vars/k8s_cluster/k8s-cluster.yml
@@ -286,7 +286,7 @@ default_kubelet_config_dir: "{{ kube_config_dir }}/dynamic_kubelet_dir"
 
 ## Supplementary addresses that can be added in kubernetes ssl keys.
 ## That can be useful for example to setup a keepalived virtual IP
-supplementary_addresses_in_ssl_keys: [10.10.24.105]
+supplementary_addresses_in_ssl_keys: [10.10.24.105, 10.10.24.109, 10.10.25.27, 10.10.25.74, rancher1.tabbycatlab.dev]
 
 ## Running on top of openstack vms with cinder enabled may lead to unschedulable pods due to NoVolumeZoneConflict restriction in kube-scheduler.
 ## See https://github.com/kubernetes-sigs/kubespray/issues/2141
