--- a/inventory/2SpeedLab/inventory.ini
+++ b/inventory/2SpeedLab/inventory.ini
@@ -7,22 +7,18 @@
 # We should set etcd_member_name for etcd cluster. The node that are not etcd members do not need to set the value,
 # or can set the empty string value.
 [kube_control_plane]
-node1 ansible_host=10.10.24.109     ip=10.10.24.109    etcd_member_name=etcd1
-node2 ansible_host=10.10.25.114     ip=10.10.25.114    etcd_member_name=etcd2
-node3 ansible_host=10.10.24.62      ip=10.10.24.62     etcd_member_name=etcd3
+node1 ansible_host=10.10.24.239     ip=10.10.24.239     etcd_member_name=etcd1
+node2 ansible_host=10.10.25.18      ip=10.10.25.18      etcd_member_name=etcd2
+node3 ansible_host=10.10.25.58      ip=10.10.25.58      etcd_member_name=etcd3
+[kube_node]
+node4 ansible_host=10.10.24.202
+node5 ansible_host=10.10.25.69
+node6 ansible_host=10.10.25.26
 
 [etcd:children]
 kube_control_plane
 
-[kube_node]
-node4 ansible_host=10.10.25.27
-node5 ansible_host=10.10.24.155
-node6 ansible_host=10.10.25.35
-node7 ansible_host=10.10.25.74
-node8 ansible_host=10.10.24.161
-node9 ansible_host=10.10.24.90
-
-[database]
-node7 ansible_host=10.10.25.74
-node8 ansible_host=10.10.24.161
-node9 ansible_host=10.10.24.90
+[all:vars]
+ansible_ssh_private_key_file= ~/.ssh/key
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+ansible_user=root
