--- a/inventory/2SpeedLab/group_vars/k8s_cluster/addons.yml
+++ b/inventory/2SpeedLab/group_vars/k8s_cluster/addons.yml
@@ -223,13 +223,13 @@ argocd_enabled: false
 # The plugin manager for kubectl
 
 # Kube VIP
-kube_vip_enabled: false
-#kube_vip_arp_enabled: true
-#kube_vip_controlplane_enabled: true
-#kube_vip_address: 10.10.88.21
-#loadbalancer_apiserver:
-#  address: "{{ kube_vip_address }}"
-#  port: 6443
+kube_vip_enabled: true
+kube_vip_arp_enabled: true
+kube_vip_controlplane_enabled: true
+kube_vip_address: 10.10.88.21
+loadbalancer_apiserver:
+  address: "{{ kube_vip_address }}"
+  port: 6443
 #kube_vip_interface: eth0
 #kube_vip_services_enabled: true
 #kube_vip_dns_mode: first
@@ -237,6 +237,7 @@ kube_vip_enabled: false
 #kube_vip_leasename: plndr-cp-lock
 #kube_vip_enable_node_labeling: false
 #kube_vip_lb_fwdmethod: local
+
 
 # Node Feature Discovery
 node_feature_discovery_enabled: false
