--- a/inventory/2SpeedLab/group_vars/k8s_cluster/addons.yml
+++ b/inventory/2SpeedLab/group_vars/k8s_cluster/addons.yml
@@ -230,6 +230,7 @@ kube_vip_address: 10.10.88.21
 loadbalancer_apiserver:
   address: "{{ kube_vip_address }}"
   port: 6443
+kube_vip_lb_enable: true
 #kube_vip_interface: eth0
 #kube_vip_services_enabled: true
 #kube_vip_dns_mode: first
