--- a/inventory/2SpeedLab/inventory.ini
+++ b/inventory/2SpeedLab/inventory.ini
@@ -22,3 +22,4 @@ kube_control_plane
 ansible_ssh_private_key_file= ~/.ssh/key
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 ansible_user=root
+gen_certs=true
